# pfsa-id

./: .gitignore.amltmp  BERT-Style-2.ipynb  BERT-Style-3.ipynb  BERT-Style-Spacy-visualization.ipynb  BERT-Style.ipynb  BERT-Style2.ipynb  BERTcrf-Style-Copy1.ipynb  DeBertaGRU.ipynb  DeBertaV3.ipynb  Token classification.ipynb  bert-large-ner-pfsaid.ipynb  bert-large-ner-pfsaid.ipynb.amltmp  bert-mp-net-ner-pfsaid.ipynb.amltmp  bert-ner-pfsaid.ipynb  bert-ner-pfsaid.ipynb.amltmp  counter.ipynb  deep_learning_model_for_pfsaid_exp_tesla_p4_7030_v2.ipynb  deep_learning_model_for_pfsaid_exp_tesla_p4_7030_v2.ipynb.amltmp  full_script.py  installation.md  learn_huggingface.ipynb  learn_huggingface_old.ipynb  pfsa-id-visualization.ipynb  pfsa-id-visualization.ipynb.amltmp  poetry.toml  pyproject.toml  requirements.txt  result-bert-mpnettokenizertrain-val-result-bert.csv  tiuz-finetune.ipynb
.ipynb_aml_checkpoints/: bert-base-ner-pfsaid-checkpoint2025-1-28-13-37-19Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-1-28-13-37-48Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-1-28-14-29-17Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-1-28-15-41-21Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-2-5-31-54Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-2-5-32-32Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-2-5-33-10Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-2-9-15-41Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-2-9-16-12Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-2-9-16-1Z.ipynb  bert-base-ner-pfsaid-checkpoint2025-2-3-6-54-56Z.ipynb  learn_huggingface-checkpoint2025-2-7-6-18-34Z.ipynb  (+34 more)
(+525 files in other folders)
